jackett/deployment.yaml
# plex/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jackett
  namespace: jackett
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  template:
    spec:
      containers:
        - name: jackett
          image: lscr.io/linuxserver/jackett:latest
          resources:
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
          securityContext:
            privileged: true
            capabilities:
              drop: ["ALL"]              
      volumes:
        - name: config
          nfs:
            server: 192.168.50.43
            path: /mnt/k3s_share/jackett/config
        - name: downloads
          nfs:
            server: 192.168.50.43
            path: /mnt/k3s_share/jackett/downloads
