jackett/svc.yaml
# plex/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett
  namespace: jackett
  annotations:
    io.cilium/lb-ipam-ips: 192.168.50.43
spec:
  selector:
    app: jackett
  type: LoadBalancer
  ports:
    - port: 9117               # < port to open on the outside on the server
      targetPort: 9117         # < targetport. port on the pod to passthrough
      name: jackett             # < reference name for the port in the deployment yaml
      protocol: TCP
